--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,88 @@
-h1{
+/* ESTILOS NAVBAR */
+.header .navbar-brand {
+  color: white !important;
+}
+
+.header .nav-link {
+  color: white !important;
+  font-size: 18px;
+  transition: all 0.5s ease;
+  margin:20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
+.header .nav-link:hover {
+  color: black !important;
+  padding: 5px 10px;
+  background: white;
+  border-radius: 10px;
+  
+}
+
+@media(max-width: 1000px){
+  .nav-link{text-align: center;}
+} 
+.header .navbar{
+  background-color: #000000 !important;
+}
+/**VIDEO Y CAPA*/
+.video{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  
+
+}
+.capa{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background:#1c1c1d ;
+  opacity: 0.5;
+  mix-blend-mode:overlay ;
+
+}
+/* LETRAS DE BIENVENIDA */
+.intro {
+  padding-top: 250px;
+  display:flexbox;
+  justify-content: center;
+  color:white;
+  position: relative;
+  z-index:2;
+  margin-left:20px ;
+}
+/* .intro h1,h3,p{
   text-align: center;
-  font-family: "Boogaloo", sans-serif;
-  font-weight: 600;
-  font-style: normal;
+} */
+.nav-link .fas {
+  color: white;
+  margin-right: 5px; /* Ajusta el espacio entre el icono y el texto */
+}
+.nav-link .fas:hover {
+  color: black !important;
+  margin-right: 5px; /* Ajusta el espacio entre el icono y el texto */
 }
 
-body{
-  height: 400px;
-  background-image: url("./imagenes/papelfondobrown.jpg");
-  background-size: cover;
-  background-repeat:no-repeat;
-  background-position: center center;
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 30px 0;
+  z-index:2;
 }
 
-.container {
+.footer p {
+  margin-bottom: 0;
+  z-index:2;
+}
+
+/* .red-social{
   text-align: center; 
-}
-
-.container img {
-  margin: 0 auto; /* Aplica márgenes automáticos para centrar la imagen horizontalmente */
-  max-width: 20%; /* ajusta el ancho máximo de la imagen */
-  height: auto; /* ajusta la altura automáticamente */ 
-
-  border: 4px solid #000; /*Ancho y color del borde */
-  border-radius: 8px; /* define un radio de borde para hacerlo redondeado */
-  padding: 1px; /*añade un espacio interno entre el borde y la imagen */
-}
-
-
-h3,p{
-  text-align: center;
-  font-family: "Boogaloo", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.red-social{
-  text-align: center; 
-}
+} */
 
 
 .icon {
@@ -46,33 +91,5 @@ h3,p{
   height: 32px;
   margin: 0 10px;
   font-size: 24px;
-  color: black;
-}
-
-.lista-star{
-  list-style-type: none; /* Elimina los puntos predeterminados de la lista */
-  text-align: center;
-}
-
-.lista-star li {
-  margin-bottom: 1px; /* Ajusta el espacio entre los elementos de la lista */
-}
-/*
-::before: Es un pseudoelemento CSS que permite agregar contenido antes del contenido real de un elemento. En este caso, se está agregando contenido antes del contenido de los elementos <li> de la lista.
-*/
-.lista-star li::before {
-  content: "\2740"; /* Utiliza un círculo como marcador */
-  color: black;
-  font-size: 24px;
-  margin-right: 1px; /*ajusta el espacio entre el marcador y el texto */
-}
-
-#borrador{
-  text-align: center;
-  border:2px solid yellow ;
-  background-color: yellow; 
-  
-}
-.prueba{
-  text-align: center;
+  color: white;
 }
