--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   color: white !important;
   font-size: 18px;
   transition: all 0.5s ease;
-  margin:20px;
+  margin: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
 }
 
@@ -16,80 +16,114 @@
   padding: 5px 10px;
   background: white;
   border-radius: 10px;
+}
+
+@media(max-width: 1000px) {
+  .nav-link {
+      text-align: center;
+  }
+}
+
+.header .navbar {
+  background-color: #000000 !important;
   
 }
 
-@media(max-width: 1000px){
-  .nav-link{text-align: center;}
-} 
-.header .navbar{
-  background-color: #000000 !important;
+/* VIDEO Y CAPA */
+.video-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  background: #000;
 }
-/**VIDEO Y CAPA*/
-.video{
+
+.video-container::before {
+  content: "";
+  display: block;
+  padding-top: 56.25%; 
+}
+
+.video-container video {
   position: absolute;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
-
 }
-.capa{
+
+.capa {
   position: absolute;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background:#1c1c1d ;
+  background: #1c1c1d;
   opacity: 0.5;
-  mix-blend-mode:overlay ;
-
+  mix-blend-mode: overlay;
 }
+
 /* LETRAS DE BIENVENIDA */
 .intro {
-  padding-top: 250px;
-  display:flexbox;
-  justify-content: center;
-  color:white;
-  position: relative;
-  z-index:2;
-  margin-left:20px ;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  color: white;
+  text-align: left;
+  z-index: 2;
 }
-/* .intro h1,h3,p{
-  text-align: center;
-} */
+
+.intro h1 {
+  font-size: 4vw; /* Tamaño relativo para ser responsivo */
+}
+
+.intro h3 {
+  font-size: 2.5vw; /* Tamaño relativo para ser responsivo */
+}
+
+.intro p {
+  font-size: 2vw; /* Tamaño relativo para ser responsivo */
+}
+
 .nav-link .fas {
   color: white;
   margin-right: 5px; /* Ajusta el espacio entre el icono y el texto */
 }
+
 .nav-link .fas:hover {
   color: black !important;
   margin-right: 5px; /* Ajusta el espacio entre el icono y el texto */
 }
-
-
-.footer {
-  background-color: #333;
-  color: #fff;
-  padding: 30px 0;
-  z-index:2;
+/*FOOTER*/
+footer{
+  background-color: black;
 }
 
-.footer p {
-  margin-bottom: 0;
-  z-index:2;
+#Copyright{
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* .red-social{
-  text-align: center; 
-} */
+#FooterLine{
+  background-color: black;
+  height: 3px;
+  width: 60px;                    
+}
 
+.my-5{
+  margin: 0%;
+}
 
 .icon {
-  display: inline-block;/* para que los iconos estén alineados horizontalmente y se comporten como elementos en línea. Esto permite que los iconos se coloquen uno al lado del otro sin iniciar una nueva línea.*/
+  display: inline-block;
   width: 32px;
   height: 32px;
   margin: 0 10px;
   font-size: 24px;
   color: white;
+}
+
+#seccion2 {
+  position: relative;
+  width: 100%;
 }
